--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,104 @@
-body {
-  background: #ddd;
-  margin: 1rem;
-  padding: 1rem;
-  max-width: 500px;
-  margin: 2rem auto;
-  font-family: "Open Sans", sans-serif;
+/* For the all pages */
+#body {
+	max-width: 500px;
+	margin: 2rem auto;
+	margin-bottom:2vw;
 }
+body {
+	background: #ddd;
+	margin: 1rem;
+	padding: 1rem;
+	font-family: "Open Sans", sans-serif;
+}
+nav {
+	border-bottom: 2px solid orange;
+}
+ol {
+	padding-left: 0;
+}
+.crumb {
+	margin-right: 2em;
+	display: inline;
+}
+a {
+	color: orange;
+}
+a:visited {
+	color: crimson;
+}
+input {
+	display: block;
+}
+img {
+	max-width: 300px;
+}
+
+/* For the profile page */
 .favorites {
 	width: 100px;
 	margin-right:31px;
 	margin-left:31px;
 	background-color: rgb(223, 223, 113);
 }
-
-nav {
-	border-bottom: 2px solid orange;
+#rows {
+    width:60vw;
+    height: 80vh;
+}
+.topics {
+    height: 25vh;
+    width: 40vw;
+    margin-bottom:5vh;
+}
+.content {
+    display: flex;
+    justify-content: space-evenly;
+    width: 60vw;
+}
+.text{
+    margin:2px;
+    width: 20vw;
+    height: 20vh;
+    border: 1px solid black
+}
+.lists {
+    font-size: 25px;
+    border: 1px solid black;
+    text-align:center;
+    width: 30vw;
 }
 
-ol {
-	padding-left: 0;
+/* For the Neighborhood page */
+h1 {
+	font-size: 60px;
+	margin:2vw;
+	text-decoration: underline;
 }
 
-.crumb {
-	margin-right: 2em;
-	display: inline;
+#Content {
+	display:flex;
+	justify-content: space-between;
+	width: 90vw;
 }
-
-a {
-	color: orange;
+.features {
+	width: 20vw;
+	height:60vh;
+	background-color: white;
 }
-
-a:visited {
-	color: crimson;
+#photos {
+	display:flex;
+	flex-direction: column;
+	width:20vw;
+	height:60vh;
+	margin-right: 5vw;
 }
-
-
-input {
-	display: block;
+.photo {
+	margin: 0;
+	height: 20vw
 }
-
-img {
-	max-width: 300px;
+h3 {
+	text-align: center;
+	text-decoration: underline;
+}
+p {
+	margin: 2vw;
 }
